--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <title>GJK - Complete Guide for Foreigners to Get a Job in South Korea</title>
-
+  <meta name="google-site-verification" content="f2f2UYIIeWkr5ldt33irmwwvwkcYoYMwIqKiOww5yd8" />
   <!-- Meta Tags for SEO -->
   <meta name="description"
     content="GJK - A comprehensive guide for foreigners looking to secure a job in South Korea. Available in English and Russian.">
