--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <!-- Open Graph Meta Tags for Social Media Sharing -->
   <meta property="og:title" content="GJK - Complete Guide for Foreigners to Get a Job in South Korea">
   <meta property="og:description"
-    content="Explore GJK's comprehensive guide to job preparation in South Korea, tailored specifically for foreigners. Available in English and Russian.">
-  <meta property="og:image" content="https://gjk.solutionaix.com/logo.png">
+    content="KJob - Your Step-by-Step Guide to Securing a Job in South Korea! Available in English and Russian.">
+  <meta property="og:image" content="https://gjk.solutionaix.com/img.png">
   <meta property="og:url" content="https://gjk.solutionaix.com/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
@@ -34,9 +34,9 @@
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="GJK - Complete Guide for Foreigners to Get a Job in South Korea">
+  <meta name="twitter:title" content="KJob - Your Step-by-Step Guide to Securing a Job in South Korea! Available in English and Russian.">
   <meta name="twitter:description"
-    content="Discover the essential guide for foreigners to prepare for a career in South Korea, brought to you by SolutionAIX team. Available in English and Russian.">
+    content="KJob - Your Step-by-Step Guide to Securing a Job in South Korea! Available in English and Russian.">
   <meta name="twitter:image" content="https://gjk.solutionaix.com/logo.png">
   <meta name="twitter:site" content="@YourTwitterHandle">
 
