Fix html header

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
   <meta name="viewport" content="width=device-width, user-scalable=no" />
 
-  <title>GJK - Complete Guide for Foreigners to Get a Job in South Korea</title>
+  <title>Kjob - Your Step-by-Step Guide to Securing a Job in South Korea!</title>
   <!-- Meta Tags for SEO -->
   <meta name="description"
-    content="GJK - A comprehensive guide for foreigners looking to secure a job in South Korea. Available in English and Russian.">
+    content="KJob - Your Step-by-Step Guide to Securing a Job in South Korea! Available in English and Russian.">
   <meta name="keywords"
-    content="GJK, South Korea, job preparation, foreigners, guide, work in South Korea, employment, career, interview, resume, English, Russian">
+    content="kjob, South Korea, job preparation, foreigners, guide, work in South Korea, employment, career, interview, resume, English, Russian">
   <meta name="author" content="solutionaix">
   <meta name="robots" content="index, follow">
 
@@ -26,8 +26,8 @@
   <meta property="og:title" content="GJK - Complete Guide for Foreigners to Get a Job in South Korea">
   <meta property="og:description"
     content="KJob - Your Step-by-Step Guide to Securing a Job in South Korea! Available in English and Russian.">
-  <meta property="og:image" content="https://gjk.solutionaix.com/img.png">
-  <meta property="og:url" content="https://gjk.solutionaix.com/">
+  <meta property="og:image" content="https://kjob.solutionaix.com/img.jpg">
+  <meta property="og:url" content="https://kjob.solutionaix.com/">
   <meta property="og:type" content="website">
   <meta property="og:locale" content="en_US">
   <meta property="og:locale:alternate" content="ru_RU">
@@ -37,7 +37,7 @@
   <meta name="twitter:title" content="KJob - Your Step-by-Step Guide to Securing a Job in South Korea! Available in English and Russian.">
   <meta name="twitter:description"
     content="KJob - Your Step-by-Step Guide to Securing a Job in South Korea! Available in English and Russian.">
-  <meta name="twitter:image" content="https://gjk.solutionaix.com/logo.png">
+  <meta name="twitter:image" content="https://kjob.solutionaix.com/logo.png">
   <meta name="twitter:site" content="@YourTwitterHandle">
 
   <!-- Google tag (gtag.js) -->
